# ROS_ElephantBot

./: README.md  UDP_receiver.py  bridge_split.sh  testudp.py
src/agv_bringup/: package.xml  setup.py
src/agv_bringup/launch/: pc.launch.py  robot.launch.py
src/agv_interfaces/: CMakeLists.txt  package.xml
src/agv_interfaces/msg/: HandControl.msg  ObstacleAlert.msg  ObstacleInfo.msg
src/agv_interfaces/srv/: SetMotionOverride.srv
src/agv_pc/: package.xml  setup.cfg  setup.py
src/agv_pc/agv_pc/: dashboard_ui.py  hand_controller.py  lidar_guard.py  motion_manager.py  udp_gateway.py  udp_sender.py
src/agv_robot/: package.xml  setup.py
src/agv_robot/agv_robot/: lidar_guard.py  udp_cmd_relay.py  udp_receiver.py
