<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_bringup</name>
  <version>1.0.0</version>
  <description>0610822 AGV package: agv_bringup</description>
  <maintainer email="n.thanadett@gmail.com">t</maintainer>
  <license>MIT</license>
  <exec_depend>agv_pc</exec_depend>
  <exec_depend>agv_robot</exec_depend>
  <exec_depend>agv_interfaces</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
